Speedup (un-)checking all packages by not updating per item

Tested with 548 packages in the list to update. From ~ 6000 ms to 25 ms
for uncheckAll() and 70 ms for checkAll().

BUG: 442402